<?xml version="1.0"?>
<package format="3">
  <name>first_challenge</name>
  <version>0.0.0</version>
  <description>The first_challenge package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>ament_cmake_auto</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <!-- <depend>rclcpp_components</depend> -->
  <depend>roomba_500driver_meiji</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- <buildtool_depend>ament_cmake</buildtool_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

</package>